--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ updateModeUI();
 updateGateUI();
 
 /* ====== /SOLANA GATE ====== */
-   script>
+   <script>
 /* ==== PHANTOM CONNECT — JEDINI IZVOR ISTINE ==== */
 function getPhantom() {
   const w = window;
@@ -931,6 +931,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
 
 
